Updated All HTML Files
Updated all HTML files with my usual format of HTML code.

--- a/src/DBIntegration.html
+++ b/src/DBIntegration.html
@@ -2,9 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="img/bookmark.png">
+    <link href="css/main.css" rel="stylesheet" type="text/css"/>
+    <title>DB Integration</title>
+
+    <script src="js/main.js" type="text/javascript"></script>
+
+    <div class="topnav">
+        <ul>
+            <li><div class="cropIcon"><img class="imgIcon" src="img/giftyicon.png"></div></li>
+            <div class="break"></div>
+            <li><a onclick="navigation(0)" id="homeNote">Home</a></li>
+            <li><a onclick="navigation(1)" id="checklistNote">Checklists</a></li>
+            <li><a onclick="navigation(2)" id="bookmarkNote">Bookmarks</a></li>
+            <li><a class="active" onclick="navigation(3)" id="databaseNote">Database</a></li>
+        </ul>
+    </div>
 </head>
 <body>
+
+<ul id="DBIntegrationContainer" class="dataList">
+    <li class="dataItem" id="TestData">Loading...</li>
+</ul>
+
+<div id="offlineModal" class="modal">
+    <div class="modal-content">
+
+        <!--Modal Header-->
+        <div class="modal-header">
+            <span class="close" id="closeOffline">&times;</span>
+            <h2>It appears that you are offline!</h2>
+        </div>
+
+        <!--Modal Body-->
+        <div class="modal-body">
+            <p>Please reconnect to the internet in order to use this tool properly!</p>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
